# FileResourceManager

./: .gitignore  CMakeLists.txt  README.md
include/: FileHandler.hpp  MemoryBlock.hpp
src/: FileHandler.cpp  MemoryBlock.cpp  main.cpp
